welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: '=' expected but ':' found.
	def ado(n:Int):Int : { n>=13 && n<=19 }
                           ^teenSum:3: error: illegal start of simple expression
	if ( a==ado || b==ado ) {
^