welcome.lessons.welcome.bat.bool2.TeenSum.scala.code
def teenSum(a:Int, b:Int):Int = {
	def ado(n:Int):Int : { n>=13 && n<=19 }
	if ( a==ado || b==ado ) {
		return 19
	}
}
